--- a/chinese-flashcard-app.html
+++ b/chinese-flashcard-app.html
@@ -99,15 +99,19 @@
         .install-prompt { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 16px; border-radius: 12px; margin-bottom: 16px; text-align: center; display: none; }
         .install-prompt.visible { display: block; }
         .install-btn { background: white; color: #667eea; border: none; padding: 10px 20px; border-radius: 8px; font-weight: bold; cursor: pointer; margin-top: 10px; }
+        
+        .help-banner { background: linear-gradient(135deg, #4CAF50 0%, #66BB6A 100%); color: white; padding: 12px 16px; border-radius: 10px; margin-bottom: 16px; font-size: 13px; line-height: 1.5; }
+        .help-banner strong { display: block; margin-bottom: 4px; font-size: 14px; }
+        .close-help { background: rgba(255,255,255,0.3); border: none; color: white; padding: 4px 12px; border-radius: 6px; margin-top: 8px; cursor: pointer; font-size: 12px; }
     </style>
 </head>
 <body>
 <div id="app">
-    <div id="installPrompt" class="install-prompt">
-        <div style="font-size: 18px; font-weight: bold; margin-bottom: 8px;">📱 Install as App</div>
-        <div style="font-size: 14px; margin-bottom: 8px;">Add to your home screen for easy access!</div>
-        <button class="install-btn" id="installBtn">Install</button>
-        <button class="install-btn" id="dismissInstall" style="background: transparent; color: white; margin-left: 8px;">Maybe Later</button>
+    <div id="helpBanner" class="help-banner">
+        <strong>💡 Tip: Add to Home Screen</strong>
+        In Chrome: Tap ⋮ (menu) → "Add to Home screen" to create an app icon!<br>
+        Your learning progress auto-saves.
+        <button class="close-help" id="closeHelp">Got it</button>
     </div>
 
     <div class="header">
@@ -155,40 +159,21 @@
 </div>
 
 <script>
-// PWA Service Worker Registration
-if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('./service-worker.js')
-        .then(reg => console.log('Service Worker registered'))
-        .catch(err => console.log('Service Worker registration failed'));
+// Note: PWA installation requires HTTPS or localhost server
+// To enable "Add to Home Screen", serve this via HTTP server
+// See run-server.py for instructions
+
+// Help banner
+var helpBanner = document.getElementById('helpBanner');
+var closeHelp = document.getElementById('closeHelp');
+
+if (localStorage.getItem('helpDismissed')) {
+    helpBanner.style.display = 'none';
 }
 
-// PWA Install Prompt
-var deferredPrompt;
-var installPrompt = document.getElementById('installPrompt');
-var installBtn = document.getElementById('installBtn');
-var dismissInstall = document.getElementById('dismissInstall');
-
-window.addEventListener('beforeinstallprompt', function(e) {
-    e.preventDefault();
-    deferredPrompt = e;
-    if (!localStorage.getItem('installDismissed')) {
-        installPrompt.classList.add('visible');
-    }
-});
-
-installBtn.addEventListener('click', function() {
-    installPrompt.classList.remove('visible');
-    if (deferredPrompt) {
-        deferredPrompt.prompt();
-        deferredPrompt.userChoice.then(function(choiceResult) {
-            deferredPrompt = null;
-        });
-    }
-});
-
-dismissInstall.addEventListener('click', function() {
-    installPrompt.classList.remove('visible');
-    localStorage.setItem('installDismissed', 'true');
+closeHelp.addEventListener('click', function() {
+    helpBanner.style.display = 'none';
+    localStorage.setItem('helpDismissed', 'true');
 });
 
 var cards = [
@@ -718,6 +703,7 @@ var touchStartY = null;
 var touchEndX = null;
 var touchEndY = null;
 var touchMoved = false;
+var touchHandled = false;
 var MIN_SWIPE = 40;
 
 flashcard.addEventListener('touchstart', function(e) {
@@ -726,6 +712,7 @@ flashcard.addEventListener('touchstart', function(e) {
     touchEndX = touchStartX;
     touchEndY = touchStartY;
     touchMoved = false;
+    touchHandled = false;
 }, { passive: true });
 
 flashcard.addEventListener('touchmove', function(e) {
@@ -744,10 +731,15 @@ flashcard.addEventListener('touchend', function(e) {
     if (!touchMoved || (Math.abs(distX) < MIN_SWIPE && Math.abs(distY) < MIN_SWIPE)) {
         isFlipped = !isFlipped;
         render();
+        touchHandled = true;
+        // Reset touchHandled after a delay to prevent click event
+        setTimeout(function() { touchHandled = false; }, 400);
     } else if (Math.abs(distX) >= MIN_SWIPE && Math.abs(distX) > Math.abs(distY)) {
         // Horizontal swipe -> navigate
         if (distX > 0) goTo(currentIndex + 1);
         else goTo(currentIndex - 1);
+        touchHandled = true;
+        setTimeout(function() { touchHandled = false; }, 400);
     }
     // Vertical swipe -> do nothing (allow page scroll)
 
@@ -755,6 +747,19 @@ flashcard.addEventListener('touchend', function(e) {
     touchEndX = null; touchEndY = null;
     touchMoved = false;
 });
+
+// Handle click events (desktop only - block on mobile)
+flashcard.addEventListener('click', function(e) {
+    // If touch was just handled, ignore this click (prevents double-flip on iOS)
+    if (touchHandled) {
+        e.preventDefault();
+        return;
+    }
+    
+    // Desktop mouse click
+    isFlipped = !isFlipped;
+    render();
+}, false);
 
 document.addEventListener('keydown', function(e) {
     if (e.key === 'ArrowRight') goTo(currentIndex + 1);
