--- a/chinese-flashcard-app.html
+++ b/chinese-flashcard-app.html
@@ -510,6 +510,147 @@ var cards = [
             { hanzi: "\u5427", pinyin: "ba", meaning: "particle (suggestion)" }
         ],
         grammarNote: "'开车' literally means 'drive car'. '去接你' means 'go pick you up'. The final '吧' is a particle that softens the statement into a suggestion, like saying 'let me' or 'I'll' in a friendly way."
+    },
+    {
+        chinese: "你可以再说一次吗？",
+        pinyin: "Nǐ kěyǐ zài shuō yīcì ma?",
+        english: "Can you say that again?",
+        vocabulary: [
+            { hanzi: "你", pinyin: "nǐ", meaning: "you" },
+            { hanzi: "可以", pinyin: "kěyǐ", meaning: "can, may" },
+            { hanzi: "再", pinyin: "zài", meaning: "again" },
+            { hanzi: "说", pinyin: "shuō", meaning: "to say, to speak" },
+            { hanzi: "一次", pinyin: "yīcì", meaning: "one time, once" },
+            { hanzi: "吗", pinyin: "ma", meaning: "question particle" }
+        ],
+        grammarNote: "'再' means 'again' for future actions. The pattern '再 + verb + 一次' means 'do something one more time' or 'again'. This is a polite way to ask someone to repeat themselves."
+    },
+    {
+        chinese: "你吃得惯中国菜吗？",
+        pinyin: "Nǐ chī de guàn zhōngguó cài ma?",
+        english: "Are you accustomed to eating Chinese food?",
+        vocabulary: [
+            { hanzi: "你", pinyin: "nǐ", meaning: "you" },
+            { hanzi: "吃", pinyin: "chī", meaning: "to eat" },
+            { hanzi: "得惯", pinyin: "de guàn", meaning: "accustomed to, used to" },
+            { hanzi: "中国菜", pinyin: "zhōngguó cài", meaning: "Chinese food" },
+            { hanzi: "吗", pinyin: "ma", meaning: "question particle" }
+        ],
+        grammarNote: "'得惯' (de guàn) means 'to be accustomed to' or 'to be used to'. The pattern 'verb + 得惯' asks if someone is comfortable with or used to doing something."
+    },
+    {
+        chinese: "改天一起吃饭吧。",
+        pinyin: "Gǎitiān yīqǐ chīfàn ba.",
+        english: "Let's have a meal together someday.",
+        vocabulary: [
+            { hanzi: "改天", pinyin: "gǎitiān", meaning: "another day, someday" },
+            { hanzi: "一起", pinyin: "yīqǐ", meaning: "together" },
+            { hanzi: "吃饭", pinyin: "chīfàn", meaning: "to eat (a meal)" },
+            { hanzi: "吧", pinyin: "ba", meaning: "particle (suggestion)" }
+        ],
+        grammarNote: "'改天' literally means 'change day' and is used to mean 'another day' or 'some other time'. '吧' at the end makes it a friendly suggestion."
+    },
+    {
+        chinese: "这个菜味道怎么样？",
+        pinyin: "Zhège cài wèidào zěnmeyàng?",
+        english: "How does this dish taste?",
+        vocabulary: [
+            { hanzi: "这个", pinyin: "zhège", meaning: "this" },
+            { hanzi: "菜", pinyin: "cài", meaning: "dish, food, vegetable" },
+            { hanzi: "味道", pinyin: "wèidào", meaning: "taste, flavor" },
+            { hanzi: "怎么样", pinyin: "zěnmeyàng", meaning: "how, how about" }
+        ],
+        grammarNote: "'味道' means 'taste' or 'flavor'. '怎么样' is used to ask 'how is it' or 'what do you think'. This is a common way to ask someone's opinion about food."
+    },
+    {
+        chinese: "我们找个地方吃饭吧。",
+        pinyin: "Wǒmen zhǎo gè dìfāng chīfàn ba.",
+        english: "Let's find a place to eat.",
+        vocabulary: [
+            { hanzi: "我们", pinyin: "wǒmen", meaning: "we, us" },
+            { hanzi: "找", pinyin: "zhǎo", meaning: "to look for, to find" },
+            { hanzi: "个", pinyin: "gè", meaning: "measure word (general)" },
+            { hanzi: "地方", pinyin: "dìfāng", meaning: "place, location" },
+            { hanzi: "吃饭", pinyin: "chīfàn", meaning: "to eat (a meal)" },
+            { hanzi: "吧", pinyin: "ba", meaning: "particle (suggestion)" }
+        ],
+        grammarNote: "'找' means 'to look for' or 'to find'. The pattern '找个地方' means 'find a place'. '吧' makes it a suggestion like 'let's'."
+    },
+    {
+        chinese: "我们点外卖吧。",
+        pinyin: "Wǒmen diǎn wàimài ba.",
+        english: "Let's order takeout.",
+        vocabulary: [
+            { hanzi: "我们", pinyin: "wǒmen", meaning: "we, us" },
+            { hanzi: "点", pinyin: "diǎn", meaning: "to order (food)" },
+            { hanzi: "外卖", pinyin: "wàimài", meaning: "takeout, delivery food" },
+            { hanzi: "吧", pinyin: "ba", meaning: "particle (suggestion)" }
+        ],
+        grammarNote: "'点' in this context means 'to order' food. '外卖' literally means 'outside sell' and refers to takeout or food delivery. Very common phrase in modern Chinese!"
+    },
+    {
+        chinese: "今天天气真好啊。",
+        pinyin: "Jīntiān tiānqì zhēn hǎo a.",
+        english: "Nice weather today.",
+        vocabulary: [
+            { hanzi: "今天", pinyin: "jīntiān", meaning: "today" },
+            { hanzi: "天气", pinyin: "tiānqì", meaning: "weather" },
+            { hanzi: "真", pinyin: "zhēn", meaning: "really, truly" },
+            { hanzi: "好", pinyin: "hǎo", meaning: "good, nice" },
+            { hanzi: "啊", pinyin: "a", meaning: "particle (emphasis/exclamation)" }
+        ],
+        grammarNote: "'真' means 'really' or 'truly' and adds emphasis. '啊' at the end is an exclamatory particle that makes the statement more casual and emotional."
+    },
+    {
+        chinese: "今天没有昨天那么冷。",
+        pinyin: "Jīntiān méiyǒu zuótiān nàme lěng.",
+        english: "Today is not as cold as yesterday.",
+        vocabulary: [
+            { hanzi: "今天", pinyin: "jīntiān", meaning: "today" },
+            { hanzi: "没有", pinyin: "méiyǒu", meaning: "not as, don't have" },
+            { hanzi: "昨天", pinyin: "zuótiān", meaning: "yesterday" },
+            { hanzi: "那么", pinyin: "nàme", meaning: "so, that" },
+            { hanzi: "冷", pinyin: "lěng", meaning: "cold" }
+        ],
+        grammarNote: "The pattern 'A + 没有 + B + 那么 + adjective' means 'A is not as [adjective] as B'. This is a common comparison structure in Chinese."
+    },
+    {
+        chinese: "你别把她的东西弄坏了。",
+        pinyin: "Nǐ bié bǎ tā de dōngxi nòng huàile.",
+        english: "Don't break her things.",
+        vocabulary: [
+            { hanzi: "你", pinyin: "nǐ", meaning: "you" },
+            { hanzi: "别", pinyin: "bié", meaning: "don't" },
+            { hanzi: "把", pinyin: "bǎ", meaning: "particle (indicates disposal)" },
+            { hanzi: "她的", pinyin: "tā de", meaning: "her" },
+            { hanzi: "东西", pinyin: "dōngxi", meaning: "things, stuff" },
+            { hanzi: "弄坏", pinyin: "nòng huài", meaning: "to break, to damage" },
+            { hanzi: "了", pinyin: "le", meaning: "particle (completion)" }
+        ],
+        grammarNote: "The '把' construction is used when an action disposes of, handles, or affects an object. The pattern is 'subject + 把 + object + verb + result'. '别' means 'don't' for commands."
+    },
+    {
+        chinese: "你快点啊！",
+        pinyin: "Nǐ kuài diǎn a!",
+        english: "Hurry up!",
+        vocabulary: [
+            { hanzi: "你", pinyin: "nǐ", meaning: "you" },
+            { hanzi: "快", pinyin: "kuài", meaning: "fast, quick" },
+            { hanzi: "点", pinyin: "diǎn", meaning: "a bit, a little" },
+            { hanzi: "啊", pinyin: "a", meaning: "particle (emphasis/urgency)" }
+        ],
+        grammarNote: "'快点' literally means 'fast a little' and is the standard way to say 'hurry up'. The '啊' adds urgency or emphasis to the command."
+    },
+    {
+        chinese: "我来吧。",
+        pinyin: "Wǒ lái ba.",
+        english: "I'll do it./Let me do it.",
+        vocabulary: [
+            { hanzi: "我", pinyin: "wǒ", meaning: "I, me" },
+            { hanzi: "来", pinyin: "lái", meaning: "to come; to do (colloquial)" },
+            { hanzi: "吧", pinyin: "ba", meaning: "particle (suggestion)" }
+        ],
+        grammarNote: "'来' here doesn't mean 'come' but rather 'to do (something)'. '我来' is a common way to volunteer to do something. The '吧' makes it a gentle offer."
     }
 ];
 
