--- a/chinese-flashcard-app.html
+++ b/chinese-flashcard-app.html
@@ -759,6 +759,135 @@ var cards = [
             { hanzi: "吧", pinyin: "ba", meaning: "particle (suggestion)" }
         ],
         grammarNote: "'来' here doesn't mean 'come' but rather 'to do (something)'. '我来' is a common way to volunteer to do something. The '吧' makes it a gentle offer."
+    },
+    {
+        chinese: "这个也太贵了吧！",
+        pinyin: "Zhège yě tài guìle ba!",
+        english: "This is too expensive!",
+        vocabulary: [
+            { hanzi: "这个", pinyin: "zhège", meaning: "this" },
+            { hanzi: "也", pinyin: "yě", meaning: "also, too" },
+            { hanzi: "太", pinyin: "tài", meaning: "too, excessively" },
+            { hanzi: "贵", pinyin: "guì", meaning: "expensive" },
+            { hanzi: "了", pinyin: "le", meaning: "particle (excessive degree)" },
+            { hanzi: "吧", pinyin: "ba", meaning: "particle (emphasis)" }
+        ],
+        grammarNote: "'也太...了' is an emphatic pattern meaning 'way too' or 'really too'. The '也' adds emphasis. '吧' at the end expresses strong feeling or surprise."
+    },
+    {
+        chinese: "别忘了带伞啊！",
+        pinyin: "Bié wàngle dài sǎn a!",
+        english: "Don't forget to bring an umbrella!",
+        vocabulary: [
+            { hanzi: "别", pinyin: "bié", meaning: "don't" },
+            { hanzi: "忘了", pinyin: "wàngle", meaning: "to forget" },
+            { hanzi: "带", pinyin: "dài", meaning: "to bring, to carry" },
+            { hanzi: "伞", pinyin: "sǎn", meaning: "umbrella" },
+            { hanzi: "啊", pinyin: "a", meaning: "particle (emphasis/reminder)" }
+        ],
+        grammarNote: "'别' is used for negative commands meaning 'don't'. '了' after '忘' indicates completion. '啊' adds a friendly reminder tone."
+    },
+    {
+        chinese: "外面下雪了！",
+        pinyin: "Wàimiàn xià xuěle!",
+        english: "It's snowing outside!",
+        vocabulary: [
+            { hanzi: "外面", pinyin: "wàimiàn", meaning: "outside" },
+            { hanzi: "下雪", pinyin: "xià xuě", meaning: "to snow" },
+            { hanzi: "了", pinyin: "le", meaning: "particle (change of state)" }
+        ],
+        grammarNote: "'下雪' literally means 'fall snow'. The '了' indicates a change of state - it wasn't snowing before, but now it is. This pattern is used for weather changes."
+    },
+    {
+        chinese: "这本书讲什么的啊？",
+        pinyin: "Zhè běn shū jiǎng shénme de a?",
+        english: "What is this book about?",
+        vocabulary: [
+            { hanzi: "这本", pinyin: "zhè běn", meaning: "this (measure word for books)" },
+            { hanzi: "书", pinyin: "shū", meaning: "book" },
+            { hanzi: "讲", pinyin: "jiǎng", meaning: "to talk about, to discuss" },
+            { hanzi: "什么", pinyin: "shénme", meaning: "what" },
+            { hanzi: "的", pinyin: "de", meaning: "particle" },
+            { hanzi: "啊", pinyin: "a", meaning: "particle (question)" }
+        ],
+        grammarNote: "'讲什么的' is a colloquial way to ask 'what is it about'. The '的' makes it into a noun phrase. '啊' softens the question."
+    },
+    {
+        chinese: "下个星期我不在这里。",
+        pinyin: "Xià ge xīngqī wǒ bú zài zhèlǐ.",
+        english: "I'm not here next week.",
+        vocabulary: [
+            { hanzi: "下个", pinyin: "xià ge", meaning: "next" },
+            { hanzi: "星期", pinyin: "xīngqī", meaning: "week" },
+            { hanzi: "我", pinyin: "wǒ", meaning: "I, me" },
+            { hanzi: "不在", pinyin: "bú zài", meaning: "not be (at a place)" },
+            { hanzi: "这里", pinyin: "zhèlǐ", meaning: "here" }
+        ],
+        grammarNote: "'下个星期' means 'next week'. '不在' specifically means 'not be present at a location', different from '没有' which means 'don't have'."
+    },
+    {
+        chinese: "那里人太多了。",
+        pinyin: "Nàlǐ rén tài duōle.",
+        english: "There are too many people there.",
+        vocabulary: [
+            { hanzi: "那里", pinyin: "nàlǐ", meaning: "there" },
+            { hanzi: "人", pinyin: "rén", meaning: "people, person" },
+            { hanzi: "太", pinyin: "tài", meaning: "too, excessively" },
+            { hanzi: "多", pinyin: "duō", meaning: "many, much" },
+            { hanzi: "了", pinyin: "le", meaning: "particle (excessive degree)" }
+        ],
+        grammarNote: "The pattern 'place + noun + adjective' describes a situation at a location. '太...了' emphasizes that something is excessive."
+    },
+    {
+        chinese: "我不是故意的。",
+        pinyin: "Wǒ búshì gùyì de.",
+        english: "I did not do it on purpose.",
+        vocabulary: [
+            { hanzi: "我", pinyin: "wǒ", meaning: "I, me" },
+            { hanzi: "不是", pinyin: "búshì", meaning: "am not, is not" },
+            { hanzi: "故意", pinyin: "gùyì", meaning: "on purpose, intentional" },
+            { hanzi: "的", pinyin: "de", meaning: "particle" }
+        ],
+        grammarNote: "'不是...的' emphasizes what something is not. '故意' means 'on purpose' or 'intentionally'. This is a common apology phrase."
+    },
+    {
+        chinese: "我们坐地铁去吧。",
+        pinyin: "Wǒmen zuò dìtiě qù ba.",
+        english: "Let's go by subway.",
+        vocabulary: [
+            { hanzi: "我们", pinyin: "wǒmen", meaning: "we, us" },
+            { hanzi: "坐", pinyin: "zuò", meaning: "to sit; to take (transportation)" },
+            { hanzi: "地铁", pinyin: "dìtiě", meaning: "subway, metro" },
+            { hanzi: "去", pinyin: "qù", meaning: "to go" },
+            { hanzi: "吧", pinyin: "ba", meaning: "particle (suggestion)" }
+        ],
+        grammarNote: "'坐' is used for taking transportation. '地铁' literally means 'ground iron'. The pattern 'verb + transportation + 去' means 'go by [transportation]'."
+    },
+    {
+        chinese: "放假去哪里玩啊？",
+        pinyin: "Fàngjià qù nǎlǐ wán a?",
+        english: "Where are you planning to go for the holiday?",
+        vocabulary: [
+            { hanzi: "放假", pinyin: "fàngjià", meaning: "to have a holiday/vacation" },
+            { hanzi: "去", pinyin: "qù", meaning: "to go" },
+            { hanzi: "哪里", pinyin: "nǎlǐ", meaning: "where" },
+            { hanzi: "玩", pinyin: "wán", meaning: "to play, to have fun" },
+            { hanzi: "啊", pinyin: "a", meaning: "particle (question)" }
+        ],
+        grammarNote: "'放假' means 'have a holiday' or 'be on vacation'. '玩' here means 'to have fun' or 'to visit'. The '啊' makes it a casual, friendly question."
+    },
+    {
+        chinese: "你的狗狗好可爱啊！",
+        pinyin: "Nǐ de gǒugou hǎo kě'ài a!",
+        english: "Your dog is so cute!",
+        vocabulary: [
+            { hanzi: "你的", pinyin: "nǐ de", meaning: "your" },
+            { hanzi: "狗狗", pinyin: "gǒugou", meaning: "dog, doggy (affectionate)" },
+            { hanzi: "好", pinyin: "hǎo", meaning: "very, so" },
+            { hanzi: "可爱", pinyin: "kě'ài", meaning: "cute, adorable" },
+            { hanzi: "啊", pinyin: "a", meaning: "particle (exclamation)" }
+        ],
+        grammarNote: "'狗狗' is an affectionate way to say 'dog', like 'doggy'. '好' before an adjective means 'very' or 'so'. '啊' adds emotional emphasis to the exclamation."
     }
 ];
 
